tests/ui/errors/invalid_directive.stderr
error: unknown directive
 --> tests/ui/errors/invalid_directive.rs:6:13
  |
6 |         div something:yes="b" {}
  |             ^^^^^^^^^

error: expected a kebab-cased ident
  --> tests/ui/errors/invalid_directive.rs:12:19
   |
12 |         div class:("abcd") = true {}
   |                   ^

error: expected a kebab-cased ident
  --> tests/ui/errors/invalid_directive.rs:18:19
   |
18 |         div style:[1, 2]="black" {}
   |                   ^

error: unknown modifier
  --> tests/ui/errors/invalid_directive.rs:30:25
   |
30 |         button on:click:delegated={|_| ()};
   |                         ^^^^^^^^^
   |
   = help: :undelegated is the only known modifier

error: unknown modifier: modifiers are only supported on `on:` directives
  --> tests/ui/errors/invalid_directive.rs:41:24
   |
41 |         div class:this:undelegated=true;
   |                        ^^^^^^^^^^^

error: unknown modifier: modifiers are only supported on `on:` directives
  --> tests/ui/errors/invalid_directive.rs:44:28
   |
44 |         div style:position:undelegated="absolute";
   |                            ^^^^^^^^^^^

error: unknown modifier: modifiers are only supported on `on:` directives
  --> tests/ui/errors/invalid_directive.rs:47:26
   |
47 |         input prop:value:something="input something";
   |                          ^^^^^^^^^

error: unknown modifier: modifiers are only supported on `on:` directives
  --> tests/ui/errors/invalid_directive.rs:50:30
   |
50 |         button use:directive:another;
   |                              ^^^^^^^

error: `attr:` is not supported on elements
  --> tests/ui/errors/invalid_directive.rs:53:16
   |
53 |         button attr:type="submit";
   |                ^^^^

error: unknown modifier: modifiers are only supported on `on:` directives
  --> tests/ui/errors/invalid_directive.rs:58:28
   |
58 |         Com clone:to_clone:undelegated;
   |                            ^^^^^^^^^^^

error: `clone:` does not take any values
  --> tests/ui/errors/invalid_directive.rs:61:19
   |
61 |         Com clone:{to_clone};
   |                   ^^^^^^^^^^

error: unknown modifier: modifiers are only supported on `on:` directives
  --> tests/ui/errors/invalid_directive.rs:64:23
   |
64 |         Com class:aaa:undelegated=[false];
   |                       ^^^^^^^^^^^

error[E0425]: cannot find value `clicky_click` in module `leptos::ev`
  --> tests/ui/errors/invalid_directive.rs:24:19
   |
24 |         button on:clicky-click={move |_| ()};
   |                   ^^^^^^^^^^^^ not found in `leptos::ev`

warning: unused variable: `to_clone`
  --> tests/ui/errors/invalid_directive.rs:56:9
   |
56 |     let to_clone = String::new();
   |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_to_clone`
   |
   = note: `#[warn(unused_variables)]` on by default
